--- a/bitpiece_macros/Cargo.toml
+++ b/bitpiece_macros/Cargo.toml
@@ -2,6 +2,12 @@
 name = "bitpiece_macros"
 version = "0.1.0"
 edition = "2021"
+authors = ["Roee Shoshani"]
+description = "bitfields for rust"
+repository = "https://github.com/roeeshoshani/bitpiece"
+license = "MIT"
+keywords = ["bitfield"]
+categories = ["embedded", "encoding", "no-std", "parsing"]
 
 [lib]
 proc-macro = true
