--- a/bitpiece_macros/Cargo.toml
+++ b/bitpiece_macros/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["embedded", "encoding", "no-std", "parsing"]
 proc-macro = true
 
 [dependencies]
+convert_case = "0.8.0"
 proc-macro2 = "1.0.86"
 quote = "1.0.36"
 syn = { version = "2.0.70", features = ["full"] }
