--- a/bitpiece_macros/Cargo.toml
+++ b/bitpiece_macros/Cargo.toml
@@ -14,6 +14,9 @@ proc-macro = true
 
 [dependencies]
 convert_case = "0.8.0"
+heck = "0.5.0"
+itertools = "0.14.0"
 proc-macro2 = "1.0.86"
 quote = "1.0.36"
+strum = { version = "0.27.2", features = ["derive"] }
 syn = { version = "2.0.70", features = ["full"] }
