--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ members = ["bitpiece_macros"]
 
 [dependencies]
 bitpiece_macros = { path = "bitpiece_macros", version = "0.4.0" }
+const_for = "0.1.5"
 paste = "1.0.15"
+static_assertions = "1.1.0"
