--- a/bitpiece_macros/Cargo.toml
+++ b/bitpiece_macros/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro = true
 
 [dependencies]
 convert_case = "0.8.0"
+enum_all_values_const = "0.1.1"
 heck = "0.5.0"
 itertools = "0.14.0"
 proc-macro2 = "1.0.86"
